--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>
 
     </title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <header class="navbar">
     <p>The Cat Shop</p>
-    <ul>
+    <ul class="navbuttons">
       <li><a href="#">Home</a></li>
       <li><a href="#">Cats</a></li>
       <li><a href="#">Products</a></li>
@@ -17,10 +18,16 @@
   </header>
   <body>
     <article class="welcomepage">
-      <img src="http://bitmakerlabs.github.io/fed-copycat/images/wallpaper-cat.jpg" alt="">
-      <h1>Meowcome to our site!</h1>
+      <ul>
+        <li>
+          <img src="http://bitmakerlabs.github.io/fed-copycat/images/wallpaper-cat.jpg" alt="">
+        </li>
+        <li>
+          <h1>Meowcome to our site!</h1>
+        </li>
+      </ul>
     </article>
-    <article class="">
+    <article class="cats">
       <h2>Cats</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -38,7 +45,7 @@
         veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
       </p>
     </article>
-    <article class="">
+    <article class="products">
       <h2>Products</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -47,7 +54,7 @@
       </p>
       <img src="" alt="">
     </article>
-    <article class="">
+    <article class="about">
       <ul>
         <li>Fun</li>
         <li>Values</li>
