--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <header class="navbar">
-    <p>The Cat Shop</p>
-    <ul class="navbuttons">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Cats</a></li>
-      <li><a href="#">Products</a></li>
-      <li><a href="#">About</a></li>
-    </ul>
+    <h1>The Cat Shop</h1>
+    <nav>
+      <ul class="navbuttons">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Cats</a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </nav>
   </header>
   <body>
-    <article class="welcomepage">
-      <ul>
-        <li>
-          <img src="http://bitmakerlabs.github.io/fed-copycat/images/wallpaper-cat.jpg" alt="">
-        </li>
-        <li>
-          <h1>Meowcome to our site!</h1>
-        </li>
-      </ul>
-    </article>
+    <section class="welcomepage">
+      <div class="">
+        <img src="http://bitmakerlabs.github.io/fed-copycat/images/wallpaper-cat.jpg" alt="Party Photo">
+      </div>
+      <div class="">
+        <h1>Meowcome to our site!</h1>
+      </div>  
+    </section>
     <article class="cats">
       <h2>Cats</h2>
       <p>
@@ -52,14 +52,24 @@
         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
         veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
       </p>
+      <ul>
+        <li class="photos"><img src="http://bitmakerlabs.github.io/fed-copycat/images/thankful-cats.jpg" alt="Thankful Cat"></li>
+        <li class="photos"><img src="http://bitmakerlabs.github.io/fed-copycat/images/bake-cats.jpg" alt="Baking Cat"></li>
+        <li class="photos"><img src="http://bitmakerlabs.github.io/fed-copycat/images/dance-cats.gif" alt="Dancing Cat"></li>
+        <li class="photos"><img src="http://bitmakerlabs.github.io/fed-copycat/images/icecream-cat.gif" alt="Ice Crem Cat"></li>
+        <li class="photos"><img src="http://bitmakerlabs.github.io/fed-copycat/images/eat-cats.jpg" alt="Eating Cat"></li>
+      </ul>
       <img src="" alt="">
     </article>
     <article class="about">
-      <ul>
+      <div class="">
+      <ul class="selector">
         <li>Fun</li>
         <li>Values</li>
         <li>Meow</li>
       </ul>
+      </div>
+
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
