--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
     <h1>The Cat Shop</h1>
     <nav>
       <ul class="navbuttons">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Cats</a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">About</a></li>
+        <li class="button"><a href="#">Home</a></li>
+        <li class="button"><a href="#">Cats</a></li>
+        <li class="button"><a href="#">Products</a></li>
+        <li class="button"><a href="#">About</a></li>
       </ul>
     </nav>
   </header>
   <body>
     <section class="welcomepage">
-      <div class="">
+      <div class="welcomephoto">
         <img src="http://bitmakerlabs.github.io/fed-copycat/images/wallpaper-cat.jpg" alt="Party Photo">
       </div>
-      <div class="">
+      <div class="welcometext">
         <h1>Meowcome to our site!</h1>
-      </div>  
+      </div>
     </section>
     <article class="cats">
       <h2>Cats</h2>
@@ -62,12 +62,21 @@
       <img src="" alt="">
     </article>
     <article class="about">
-      <div class="">
+      <!-- <div class="">
       <ul class="selector">
         <li>Fun</li>
         <li>Values</li>
         <li>Meow</li>
       </ul>
+      </div> -->
+      <div class="aboutfun">
+        <h3>Fun</h3>
+      </div>
+      <div class="aboutvalues">
+        <h3>Values</h3>
+      </div>
+      <div class="aboutmeow">
+        <h3>Meow</h3>
       </div>
 
       <p>
@@ -78,6 +87,6 @@
     </article>
   </body>
   <footer>
-    <p>© Meow 2017</p>
+    <p class="copyright">© Meow 2017</p>
   </footer>
 </html>
