re design css applications

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
         veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
       </p>
-      <ul>
+      <ul class="catphotos">
         <li class="photos"><img src="http://bitmakerlabs.github.io/fed-copycat/images/thankful-cats.jpg" alt="Thankful Cat"></li>
         <li class="photos"><img src="http://bitmakerlabs.github.io/fed-copycat/images/bake-cats.jpg" alt="Baking Cat"></li>
         <li class="photos"><img src="http://bitmakerlabs.github.io/fed-copycat/images/dance-cats.gif" alt="Dancing Cat"></li>
@@ -69,16 +69,28 @@
         <li>Meow</li>
       </ul>
       </div> -->
-      <div class="aboutfun">
-        <h3>Fun</h3>
-      </div>
-      <div class="aboutvalues">
-        <h3>Values</h3>
-      </div>
-      <div class="aboutmeow">
-        <h3>Meow</h3>
+      <div class="team">
+        <div class="aboutfun">
+          <h3>Fun</h3>
+        </div>
+        <div class="aboutvalues">
+          <h3>Values</h3>
+        </div>
+        <div class="aboutmeow">
+          <h3>Meow</h3>
+        </div>
       </div>
 
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </p>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
