finish final draft

--- a/index.html
+++ b/index.html
@@ -8,97 +8,99 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <header class="navbar">
-    <h1>The Cat Shop</h1>
-    <nav>
-      <ul class="navbuttons">
-        <li class="button"><a href="#">Home</a></li>
-        <li class="button"><a href="#">Cats</a></li>
-        <li class="button"><a href="#">Products</a></li>
-        <li class="button"><a href="#">About</a></li>
-      </ul>
-    </nav>
-  </header>
-  <body>
-    <section class="welcomepage">
-      <div class="welcomephoto">
-        <img src="http://bitmakerlabs.github.io/fed-copycat/images/wallpaper-cat.jpg" alt="Party Photo">
-      </div>
-      <div class="welcometext">
-        <h1>Meowcome to our site!</h1>
-      </div>
-    </section>
-    <article class="cats">
-      <h2>Cats</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      </p>
-    </article>
-    <article class="products">
-      <h2>Products</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      </p>
-      <ul class="catphotos">
-        <li class="photos"><img src="http://bitmakerlabs.github.io/fed-copycat/images/thankful-cats.jpg" alt="Thankful Cat"></li>
-        <li class="photos"><img src="http://bitmakerlabs.github.io/fed-copycat/images/bake-cats.jpg" alt="Baking Cat"></li>
-        <li class="photos"><img src="http://bitmakerlabs.github.io/fed-copycat/images/dance-cats.gif" alt="Dancing Cat"></li>
-        <li class="photos"><img src="http://bitmakerlabs.github.io/fed-copycat/images/icecream-cat.gif" alt="Ice Crem Cat"></li>
-        <li class="photos"><img src="http://bitmakerlabs.github.io/fed-copycat/images/eat-cats.jpg" alt="Eating Cat"></li>
-      </ul>
-      <img src="" alt="">
-    </article>
-    <article class="about">
-      <!-- <div class="">
-      <ul class="selector">
-        <li>Fun</li>
-        <li>Values</li>
-        <li>Meow</li>
-      </ul>
-      </div> -->
-      <div class="team">
-        <div class="aboutfun">
-          <h3>Fun</h3>
+    <div class="">
+      <h1>The Cat Shop</h1>
+      <nav>
+        <ul class="navbuttons">
+          <li class="button"><a href="#">Home</a></li>
+          <li class="button"><a href="#">Cats</a></li>
+          <li class="button"><a href="#">Products</a></li>
+          <li class="button"><a href="#">About</a></li>
+        </ul>
+      </nav>
+    </header>
+    <body>
+      <section class="welcomepage">
+        <div class="welcomephoto">
+          <img src="http://bitmakerlabs.github.io/fed-copycat/images/wallpaper-cat.jpg" alt="Party Photo">
         </div>
-        <div class="aboutvalues">
-          <h3>Values</h3>
+        <div class="welcometext">
+          <h1>Meowcome to our site!</h1>
         </div>
-        <div class="aboutmeow">
-          <h3>Meow</h3>
+      </section>
+      <article class="cats">
+        <h2>Cats</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+          veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+          veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+          veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+      </article>
+      <article class="products">
+        <h2>Products</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+          veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+        <ul class="catphotos">
+          <li class="photos"><img src="http://bitmakerlabs.github.io/fed-copycat/images/thankful-cats.jpg" alt="Thankful Cat"></li>
+          <li class="photos"><img src="http://bitmakerlabs.github.io/fed-copycat/images/bake-cats.jpg" alt="Baking Cat"></li>
+          <li class="photos"><img src="http://bitmakerlabs.github.io/fed-copycat/images/dance-cats.gif" alt="Dancing Cat"></li>
+          <li class="photos"><img src="http://bitmakerlabs.github.io/fed-copycat/images/icecream-cat.gif" alt="Ice Crem Cat"></li>
+          <li class="photos"><img src="http://bitmakerlabs.github.io/fed-copycat/images/eat-cats.jpg" alt="Eating Cat"></li>
+        </ul>
+        <img src="" alt="">
+      </article>
+      <article class="about">
+        <!-- <div class="">
+        <ul class="selector">
+          <li>Fun</li>
+          <li>Values</li>
+          <li>Meow</li>
+        </ul>
+        </div> -->
+        <div class="team">
+          <div class="aboutfun">
+            <h3>Fun</h3>
+          </div>
+          <div class="aboutvalues">
+            <h3>Values</h3>
+          </div>
+          <div class="aboutmeow">
+            <h3>Meow</h3>
+          </div>
         </div>
-      </div>
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      </p>
-    </article>
-  </body>
-  <footer>
-    <p class="copyright">© Meow 2017</p>
-  </footer>
+        <br>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+          veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+          veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+          veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+      </article>
+    </body>
+    <footer>
+      <p class="copyright">© Meow 2017</p>
+    </footer>
+</div>
 </html>
